--- a/styles/scss/_intro-section.scss
+++ b/styles/scss/_intro-section.scss
@@ -13,8 +13,8 @@
       position: absolute;
       top: 20%;
       bottom: -10%;
-      left: 25%;
-      width: 1000px;
+      left: 27%;
+      width: 2000px;
       border-bottom-left-radius: 300px;
       border-top-left-radius: 300px;
       background-color: hsl(231, 69%, 60%);
@@ -24,7 +24,7 @@
     .hero-img {
       width: 100%;
       max-width: 400px;
-      transform: scale(1.15);
+      transform: scale(1.175);
     }
   }
 
@@ -83,7 +83,7 @@
 
       .hero-img {
         max-width: 500px;
-        transform: translateY(10%);
+        transform: translate(8%, 10%);
       }
     }
 
